--- a/components/about/about.module.scss
+++ b/components/about/about.module.scss
@@ -4,10 +4,10 @@ $black: #19293A;
 
 
 .about {
-    display: flex;
+
     flex-direction:column;
     margin: auto;
-    height: 100vh;
+    min-height: 100vh;
     position: relative;
 }
 
